fixing social icon spacing issue

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -2540,10 +2540,6 @@ table tr th {
 	display: flex;
 }
 
-.wp-block-social-links li {
-	margin-right: 6px;
-}
-
 .wp-block-social-links li:last-child {
 	margin-right: 0px;
 }
